@@ -1,3 +1,9 @@
+2007-02-14  Francois Dumont  <dums@stlport...>
+
+	* stlport/stl/config/_intel.h: Configuration fix, Intel compiler
+	before 8.1 have problem with template method specialization. Thanks
+	Dragan Tubic.
+
 2007-02-09  Francois Dumont  <dums@stlport...>
 
 	* test/unit/locale_test.cpp: Enhance LocaleTest::collate_facet
